fix: overflow

--- a/css/utils.css
+++ b/css/utils.css
@@ -18,6 +18,7 @@
 }
 
 html {
+    overflow-x: hidden;
     scroll-behavior: smooth;
     font-size: 12.8px;
 }
